--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     </style>
 </head>
 <body>
+    <a href="https://michalb1tp.github.io/mama/">Wróć</a>
     <B><P>INF.03-08-25.06-SG</P></B>
 
 
@@ -133,4 +134,5 @@
     </footer>
 
 </body>
+
 </html>
